--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -170,15 +170,15 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-1</label>
-              <input type="text" id="wan1-isp-ip-input" value="" placeholder="192.168.1.1">
+              <input onkeypress="return event.charCode != 32" type="text" id="wan1-isp-ip-input" value="" placeholder="192.168.1.1">
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
-              <input type="text" id="wan1-distance-input" value="1" placeholder="1">
+              <input onkeypress="return event.charCode != 32" type="text" id="wan1-distance-input" value="1" placeholder="1">
             </div>
             <div style="width:25%;">
               <label>IP Public Check</label>
-              <input type="text" id="wan1-public-ip-input" value="4.2.2.1" placeholder="4.2.2.1" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan1-public-ip-input" value="4.2.2.1" placeholder="4.2.2.1" disabled>
             </div>
           </div>
           <div style="display:flex;border-bottom:1px solid #bbb; margin-bottom:7px;">
@@ -188,15 +188,15 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-2</label>
-              <input type="text" id="wan2-isp-ip-input" value="" placeholder="192.168.2.1">
+              <input onkeypress="return event.charCode != 32" type="text" id="wan2-isp-ip-input" value="" placeholder="192.168.2.1">
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
-              <input type="text" id="wan2-distance-input" value="2" placeholder="2">
+              <input onkeypress="return event.charCode != 32" type="text" id="wan2-distance-input" value="2" placeholder="2">
             </div>
             <div style="width:25%;">
               <label>IP Public Check</label>
-              <input type="text" id="wan2-public-ip-input" value="4.2.2.2" placeholder="4.2.2.2" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan2-public-ip-input" value="4.2.2.2" placeholder="4.2.2.2" disabled>
             </div>
           </div>
           <div style="display:flex;border-bottom:1px solid #bbb; margin-bottom:7px;">
@@ -206,15 +206,15 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-3</label>
-              <input type="text" id="wan3-isp-ip-input" value="" placeholder="192.168.3.1" disabled >
+              <input onkeypress="return event.charCode != 32" type="text" id="wan3-isp-ip-input" value="" placeholder="192.168.3.1" disabled >
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
-              <input type="text" id="wan3-distance-input" value="3" placeholder="3" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan3-distance-input" value="3" placeholder="3" disabled>
             </div>
             <div style="width:25%;">
               <label>IP Public Check</label>
-              <input type="text" id="wan3-public-ip-input" value="4.2.2.3" placeholder="4.2.2.3" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan3-public-ip-input" value="4.2.2.3" placeholder="4.2.2.3" disabled>
             </div>
           </div>
           <div style="display:flex;border-bottom:1px solid #bbb; margin-bottom:7px;">
@@ -224,15 +224,15 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-4</label>
-              <input type="text" id="wan4-isp-ip-input" value="" placeholder="192.168.4.1" disabled >
+              <input onkeypress="return event.charCode != 32" type="text" id="wan4-isp-ip-input" value="" placeholder="192.168.4.1" disabled >
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
-              <input type="text" id="wan4-distance-input" value="4" placeholder="4" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan4-distance-input" value="4" placeholder="4" disabled>
             </div>
             <div style="width:25%;">
               <label>IP Public Check</label>
-              <input type="text" id="wan4-public-ip-input" value="4.2.2.4" placeholder="4.2.2.4" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan4-public-ip-input" value="4.2.2.4" placeholder="4.2.2.4" disabled>
             </div>
           </div>
           <div style="display:flex;border-bottom:1px solid #bbb; margin-bottom:7px;">
@@ -242,15 +242,15 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-5</label>
-              <input type="text" id="wan5-isp-ip-input" value="" placeholder="192.168.5.1" disabled >
+              <input onkeypress="return event.charCode != 32" type="text" id="wan5-isp-ip-input" value="" placeholder="192.168.5.1" disabled >
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
-              <input type="text" id="wan5-distance-input" value="5" placeholder="5" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan5-distance-input" value="5" placeholder="5" disabled>
             </div>
             <div style="width:25%;">
               <label>IP Public Check</label>
-              <input type="text" id="wan5-public-ip-input" value="4.2.2.5" placeholder="4.2.2.5" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan5-public-ip-input" value="4.2.2.5" placeholder="4.2.2.5" disabled>
             </div>
           </div>
           <div style="display:flex;border-bottom:1px solid #bbb; margin-bottom:7px;">
@@ -260,15 +260,15 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-6</label>
-              <input type="text" id="wan6-isp-ip-input" value="" placeholder="192.168.6.1" disabled >
+              <input onkeypress="return event.charCode != 32" type="text" id="wan6-isp-ip-input" value="" placeholder="192.168.6.1" disabled >
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
-              <input type="text" id="wan6-distance-input" value="6" placeholder="6" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan6-distance-input" value="6" placeholder="6" disabled>
             </div>
             <div style="width:25%;">
               <label>IP Public Check</label>
-              <input type="text" id="wan6-public-ip-input" value="4.2.2.6" placeholder="4.2.2.6" disabled>
+              <input onkeypress="return event.charCode != 32" type="text" id="wan6-public-ip-input" value="4.2.2.6" placeholder="4.2.2.6" disabled>
             </div>
           </div>
           <button style="margin-right:2px" type="button" onclick="myFunction()">Generate</button>
