--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -155,7 +155,7 @@
           </select>
           <div style="margin-top:10px;margin-bottom:10px">
             <label>Gateway to WAN or ISP Game</label>
-            <input type="text" id="ip-gateway-input" placeholder="example:192.168.2.1"><br>
+            <input type="text" id="ip-gateway-input" placeholder="ex: 192.168.2.1 or pppoe-out"><br>
           </div>
           <label>Select Mangle Games</label> <input style="margin-bottom:2px" type="text" id="myInput" onkeyup="myFunctionGames()" placeholder="find Game.."> 
           <div class="list-game">
