--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -170,7 +170,7 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-1</label>
-              <input onkeypress="return event.charCode != 32" type="text" id="wan1-isp-ip-input" value="" placeholder="192.168.1.1">
+              <input type="text" id="wan1-isp-ip-input" value="" placeholder="192.168.1.1">
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
@@ -188,7 +188,7 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-2</label>
-              <input onkeypress="return event.charCode != 32" type="text" id="wan2-isp-ip-input" value="" placeholder="192.168.2.1">
+              <input type="text" id="wan2-isp-ip-input" value="" placeholder="192.168.2.1">
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
@@ -206,7 +206,7 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-3</label>
-              <input onkeypress="return event.charCode != 32" type="text" id="wan3-isp-ip-input" value="" placeholder="192.168.3.1" disabled >
+              <input type="text" id="wan3-isp-ip-input" value="" placeholder="192.168.3.1" disabled >
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
@@ -224,7 +224,7 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-4</label>
-              <input onkeypress="return event.charCode != 32" type="text" id="wan4-isp-ip-input" value="" placeholder="192.168.4.1" disabled >
+              <input type="text" id="wan4-isp-ip-input" value="" placeholder="192.168.4.1" disabled >
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
@@ -242,7 +242,7 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-5</label>
-              <input onkeypress="return event.charCode != 32" type="text" id="wan5-isp-ip-input" value="" placeholder="192.168.5.1" disabled >
+              <input type="text" id="wan5-isp-ip-input" value="" placeholder="192.168.5.1" disabled >
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
@@ -260,7 +260,7 @@
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Gateway ISP-6</label>
-              <input onkeypress="return event.charCode != 32" type="text" id="wan6-isp-ip-input" value="" placeholder="192.168.6.1" disabled >
+              <input type="text" id="wan6-isp-ip-input" value="" placeholder="192.168.6.1" disabled >
             </div>
             <div style="width:25%;margin-right:5px">
               <label>Distance</label>
