--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -179,11 +179,11 @@
           </div>
           <div style="width:50%;margin-right:10px">
             <label>First Regexp</label> 
-            <input  type="text" id="first-regexp" placeholder="regex" value=".">
+            <input onkeypress="return event.charCode != 32" style='color:#f60; font-size:16px; font-weight:bold' type="text" id="first-regexp" placeholder="regex" value=".">
           </div>
           <div style="width:50%">
             <label>Last Regexp</label> 
-            <input  type="text" id="last-regexp" placeholder="regex" value="">
+            <input onkeypress="return event.charCode != 32" style='color:#f60; font-size:16px; font-weight:bold'  type="text" id="last-regexp" placeholder="regex" value="">
           </div>
         </div>
         <div class="list-output-content">
