--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -4,14 +4,14 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik PPP Secrets Username Password Generator - BuanaNETPBun.Github.io</title>
-    <meta content='MikroTik Create PPP Username Password Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='PPP, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
+    <meta content='MikroTik Create PPP Secrets Username Password Generator - BuanaNETPBun.Github.io' name='description'>
+    <meta content='PPP, Secrets, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Mikrotik PPP Username Password Generator By BuanaNET-Pbun">
-    <meta property="og:description" content="Mikrotik Create Username Password PPP Generator By BuanaNET-Pbun">
+    <meta property="og:title" content="Mikrotik PPP Secrets Username Password Generator By BuanaNET-Pbun">
+    <meta property="og:description" content="Mikrotik PPP Secrets Username Password Generator By BuanaNET-Pbun">
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/206824761-905970c2-51d2-461e-8641-ceb92a5026d3.png">
-    <meta property="og:image:alt" content="Mikrotik PPP Username Password Generator By BuanaNET-Pbun">
+    <meta property="og:image:alt" content="Mikrotik PPP Secrets Username Password Generator By BuanaNET-Pbun">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/mikrotik-username-password-ppp-generator.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
