--- a/mikrotik/mikrotik-blocked-meris-botnet.html
+++ b/mikrotik/mikrotik-blocked-meris-botnet.html
@@ -49,8 +49,7 @@ You can also work with your ISPs to block the following addresses, which these m
 
 copy paste this script to terminal
 
-<code class="routeros">
-/system scheduler remove [find where on-event~"script3_"]
+<code class="routeros">/system scheduler remove [find where on-event~"script3_"]
 /system script remove [find where name~"script3_"]
 /file remove [find name~"mikrotik.php"]
 /ip socks set enabled=no
@@ -60,8 +59,8 @@ copy paste this script to terminal
 or you can use address list for block him
 
 <code class="routeros">/ip firewall filter 
-add action=drop chain=input comment="BLOCK MERIS BOTNET" disabled=yes dst-address-list=blocked-meris-botnet
-add action=drop chain=forward disabled=yes dst-address-list=blocked-meris-botnet
+add action=drop chain=input comment="BLOCK MERIS BOTNET" dst-address-list=blocked-meris-botnet
+add action=drop chain=forward dst-address-list=blocked-meris-botnet
 
 /ip firewall address-list
 add list=blocked-meris-botnet add=eeongous.com
@@ -99,7 +98,7 @@ add list=blocked-meris-botnet add=oddgames.info
 add list=blocked-meris-botnet add=widechanges.best
 add list=blocked-meris-botnet add=zancetom.com
 </code>
-Credit: https://wiki.mikrotik.com/wiki/Audible_signal_test
+Credit: https://blog.mikrotik.com/security/meris-botnet.html
 </pre>
 <div id="fb-root"></div><script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script> <script async defer src="https://buttons.github.io/buttons.js"></script><script>if (window.top != window.self){document.getElementById("hidelink").innerHTML = "";} else {document.getElementById("hidelink").innerHTML = "<div class='logo'><span class='logo-left'><a href='https://buananetpbun.github.io/mikrotik'><img style='margin-bottom:-5px;margin-right:10px' height='40' width='50' src='../img/mylogo.png'><span style='color:#ff6600 !important'>BuanaNETPBun</span>.Github.io</a></span><span class='logo-right' style='margin-top:8px'><a class='github-button' href='https://github.com/buananetpbun' data-show-count='true' aria-label='Follow'>Follow</a><img style='padding-left:6px !important;padding-right:4px !important;' src='https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false' alt='Hits'/><div class='fb-like' data-href='https://www.facebook.com/buananetmikrotik' data-width='' data-layout='button_count' data-action='like' data-size='small' data-share='false'></div></span><div style='clear: both;'></div></div><div class='header'><span class='header-left'><span style='float:left; margin-right:6px; margin-top:-2px'></span><span style='color:#fff;font-weight:bold;font-size:20px;margin-top:-2px;'>MIKROTIK SCRIPT ROUTEROS DATABASE</span></span><div style='clear: both;'></div></div>"}</script>
 <br>
