--- a/mikrotik/mikrotik-blocked-meris-botnet.html
+++ b/mikrotik/mikrotik-blocked-meris-botnet.html
@@ -18,17 +18,7 @@
 <h1>How To Blocked Meris Botnet - Mikrotik Script RouterOS</h1>
 <pre>How To Blocked Meris Botnet?
 
-In early September 2021 QRATOR labs published an article about a new wave of DDoS attacks, which are originating from a botnet involving MikroTik devices. 
-
-As far as we have seen, these attacks use the same routers that were compromised in 2018, when MikroTik RouterOS had a vulnerability, that was quickly patched. 
-
-There is no new vulnerability in RouterOS and there is no malware hiding inside the RouterOS filesystem even on the affected devices. The attacker is reconfiguring RouterOS devices for remote access, using commands and features of RouterOS itself. 
-
-Unfortunately, closing the old vulnerability does not immediately protect these routers. If somebody got your password in 2018, just an upgrade will not help. You must also change password, re-check your firewall if it does not allow remote access to unknown parties, and look for scripts that you did not create. 
-
-We have tried to reach all users of RouterOS about this, but many of them have never been in contact with MikroTik and are not actively monitoring their devices. We are working on other solutions too.
-
-There are no new vulnerabilities in these devices. RouterOS has been recently independently audited by several third parties.
+Overcoming Meris Botnet that infiltrates Mikrotik Routers where your router will be turned into a zombie to carry out DDOS attacks.
 
 Best course of action: 
 
