--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -36,7 +36,7 @@
       html,body{color:#292929;line-height:1.4;height:100%;width:100%;margin-top:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat;;font-size:14px}
       *{box-sizing:border-box}
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
-      .logo a{color:#ddd!important;text-decoration:none!important}
+      .logo a{color:#fff!important;text-decoration:none!important}
       #wrap{max-width:900px;margin:0 auto;padding:0 5px 0 5px}
       .header{height:auto;width:100%;margin-top:0px;margin-bottom:10px;border-top:0px solid #555}
       .main-wrap{background-color:#f60}
