--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -34,7 +34,7 @@
       *{box-sizing:border-box}
       ul{list-style-type:square}
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
-      .logo a{color:#ddd!important;text-decoration:none!important}
+      .logo a{color:#fff!important;text-decoration:none!important}
       #wrap{max-width:1024px;margin:0 auto;padding:0 5px}
       .header{height:auto;width:100%;margin-top:0px;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{display:flex}
