--- a/port-knocking-icmp.html
+++ b/port-knocking-icmp.html
@@ -34,7 +34,7 @@
       *{box-sizing:border-box}
       #wrap{max-width:900px;margin:0 auto;padding:0 5px}
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
-      .logo a{color:#ddd!important;text-decoration:none!important}
+      .logo a{color:#fff!important;text-decoration:none!important}
       .header{height:auto;width:100%;margin-top:0px;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{display:flex}
       .content{flex:1;width:70%;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;height:auto;border-radius:0 5px 5px 0}
