--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -35,7 +35,7 @@
       *{box-sizing:border-box}
       .Menu{width:100%;border-bottom:1px solid #ccc;height:100%;padding-bottom:15px;margin-bottom:20px;font-size:14px;font-weight:700}
       .logo{margin-top:15px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
-      .logo a{color:#ddd!important;text-decoration:none!important}
+      .logo a{color:#fff!important;text-decoration:none!important}
       #wrap{max-width:900px;margin:0 auto;padding:0 5px 0 5px}
       .header{height:auto;width:100%;margin-top:0px;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{display:flex}
