--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -43,7 +43,7 @@
       label{padding-bottom:5px;display:inline-block;font-weight:600}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
+      h1{color:#fff;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
