--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -44,7 +44,7 @@
       .footer{padding-top:15px;padding-bottom:20px;clear:both;width:auto;font-size:13px;color:#ddd}
 	  label {font-weight:600; font-size:14px;}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
+      h1{color:#fff;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
