--- a/simple-queue-generator.html
+++ b/simple-queue-generator.html
@@ -41,7 +41,7 @@
       .sidebar{width:40%;background-color:#ddd;border:1px solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:15px}
       .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
+      h1{color:#fff;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
