--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -43,7 +43,7 @@
       .sidebar{float:left;width:34%;background-color:#eee;border:1px solid #ccc;height:auto;border-radius:5px 0 0 5px;font-size:14px;padding:15px}
       .footer{padding-top:15px;padding-bottom:20px;clear:both;width:auto;font-size:13px;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
+      h1{color:#fff;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
