--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -34,8 +34,8 @@
       pre{white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;white-space:pre-wrap;word-wrap:break-word}
       *{box-sizing:border-box}
       p{display:list-item;list-style:square;padding:3px 0;margin:0 0 0 22px;color:#999}
-      .logo{border-bottom:0 solid #ccc;margin-bottom:20px;margin-top:15px;color:#ddd;font-size:30px;font-weight:700}
-      .logo a{color:#ddd!important;text-decoration:none!important;font-size:25px;text-decoration:none}
+      .logo{border-bottom:0 solid #ccc;margin-bottom:20px;margin-top:15px;color:#fff;font-size:30px;font-weight:700}
+      .logo a{color:#fff!important;text-decoration:none!important;font-size:25px;text-decoration:none}
       .logo-left{float:left}
       .logo-right{float:right;margin-bottom:5px}
       #wrap{max-width:1180px;min-width:200px;margin:0 auto}
