--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -142,7 +142,7 @@
           </div>
         </div>
         <div class="logo-left" style="float:left;"> 
-          <a href="https://buananetpbun.github.io/policy-based-routing-website.html"><img alt="buananetpbun" style="float:left; margin-top:0px;margin-right:5px" width="35" src="./img/mylogo.png"><span style='color:#ff6600 !important'>Buananetpbun</span>.Github.io</a>  
+          <a href="https://buananetpbun.github.io/policy-based-routing-website.html"><img alt="buananetpbun" style="float:left; margin-top:0px;margin-right:5px" width='35' src="./img/mylogo.png"><span style='color:#ff6600 !important'>Buananetpbun</span>.Github.io</a>  
         </div>
       </div>
       <div style="clear:both"></div>
