--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <a class="github-button" href="https://github.com/sponsors/buananetpbun" data-icon="octicon-heart" aria-label="Sponsor">Sponsor</a>		
           </div>
           <div class="logo-left">	  
-            <a href="https://buananetpbun.github.io"><img alt="buananetpbun.github.io" style="float:left; margin-top:-10px;margin-right:7px" width="61" src="./img/mylogo2.png"><span style='color:#ff6600 !important'>Buananetpbun</span>.Github.io</a>
+            <a href="https://buananetpbun.github.io"><img alt="buananetpbun.github.io" style="float:left; margin-right:7px" width="45" src="./img/mylogo2.png"><span style='color:#ff6600 !important'>Buananetpbun</span>.Github.io</a>
           </div>
         </div>
         <div style="clear:both;"></div>
