--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       @media screen and (max-width:600px) {
       .disclaimer{padding:5px;font-size:13px}
       .logo-left a{padding-top:5px!important;font-size:18px}
-      .logo-left img{height:40px;width:50px;margin-top:-8px!important;margin-right:5px!important}
+      .logo-left img{height:40px;margin-top:-8px!important;margin-right:5px!important}
       .column{float:left;width:100%}
       .text-join-now{display:none}
       .show-login-menu{display:flex;justify-content:center;width:100%;margin-bottom:10px}
