--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       }
       @media screen and (max-width:768px) {
       .logo-left a{margin-top:5px!important;font-size:20px}
-      .logo-left img{width:40px;margin-top:-3px!important}
+      .logo-left img{width:40px;}
       h1{font-size:40px}
       h2{font-size:19px}
       .content{width:100%!important;padding:15px}
@@ -131,8 +131,6 @@
       }
       @media screen and (max-width:600px) {
       .disclaimer{padding:5px;font-size:13px}
-      .logo-left a{padding-top:5px!important;font-size:18px}
-      .logo-left img{height:40px;margin-top:-8px!important;margin-right:5px!important}
       .column{float:left;width:100%}
       .text-join-now{display:none}
       .show-login-menu{display:flex;justify-content:center;width:100%;margin-bottom:10px}
