--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://buananetpbun.github.io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://buananetpbun.github.io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://buananetpbun.github.io/favicon-16x16.png">
+    <link rel="manifest" href="https://buananetpbun.github.io/site.webmanifest">
     <meta name="google-site-verification" content="VjnLBZ-ypbNyJxYE9KWmaIHeQ3K-4GO4h8Ddb1zMD28" >
     <meta property="og:title" content="Free MikroTik RouterOS Online Tools Generator - BuanaNETPBun.Github.io">
     <meta property="og:description" content="Free MikroTik RouterOS Online Tools Generator, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts from BuanaNETPBun.Github.io">
@@ -35,7 +39,7 @@
       *{box-sizing:border-box}
       h1{font-size:48px;font-size:3rem;font-weight:700;letter-spacing:-1.6px;letter-spacing:-.1rem;line-height:1;text-align:center}
       h1 span.light{font-weight:300}
-	  h1 strong{font-weight:600}
+      h1 strong{font-weight:600}
       h2{font-weight:600;font-size:21px;color:#292929;border-bottom:1px solid #ccc;margin-bottom:6px;padding-bottom:3px}
       h3,h4,h5,h6{font-weight:400;font-size:17px;color:#292929;margin-bottom:10px;padding-bottom:10px}
       pre{white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;white-space:pre-wrap;word-wrap:break-word}
@@ -70,7 +74,7 @@
       #show-login{cursor:pointer}
       #show-login:hover{opacity:.7}
       .modal{display:block;position:fixed;z-index:1;padding-top:170px;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,0.6)}
-     .modal-login{display:none;position:fixed;z-index:1;padding-top:170px;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,0.6)}
+      .modal-login{display:none;position:fixed;z-index:1;padding-top:170px;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,0.6)}
       .modal-content{line-height:1.4;border-radius:5px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;color:#ddd;margin:auto;padding:20px;border:1px solid #444;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19);font-weight:700;font-size:14px}
       .modal-content p{padding:0;margin:5px 5px 0 17px;display:list-item;line-height:2;list-style:disc}
       .modal-content h2{color:#f60;float:left;padding:0;margin:0}
@@ -85,7 +89,7 @@
       .gsc-input-box{border-radius:5px;height:34px;background:#fff!important;margin-right:-6px!important;line-height:normal!important}
       .gsc-search-button-v2{border-radius:5px!important;height:34px!important}
       .gsc-control-cse{background:#fff!important;border:none!important;clear:both}
-	  .google-search, .gcse-searchbox {float:right;width:250px;}
+      .google-search, .gcse-searchbox {float:right;width:250px;}
       div#container_notlike,div#container_like{display:none}
       #dialogoverlay{display:none;opacity:.5;position:fixed;top:0;left:0;background:#292929;width:100%;z-index:10}
       #dialogbox{display:none;position:fixed;background:#292929;border-radius:5px;width:400px;z-index:10;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19)}
@@ -142,7 +146,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
-	  .google-search, .gcse-searchbox{margin-top:6px;width:100% !important}	  
+      .google-search, .gcse-searchbox{margin-top:6px;width:100% !important}	  
       .google-search, .gcse-searchbox{width:100% !important}	  
       h1{font-size:25px}
       h2{font-size:17px}
@@ -267,7 +271,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code Template</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot with "Change TTL"</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hotspot-wizard.html">Easy Hotspot Configuration Wizard</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-ppp-generator.html">PPP Secrets Username Password Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>			
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-ppp-generator.html">PPP Secrets Username Password Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Hotspot Username Password Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
