--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-failover-script-generator.html">Failover Recursive Gateway</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/static-routing-games.html">Games Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-local-ip-pbr.html">Local Client IP Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>			
           </div>
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding with NAT</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
