--- a/mikrotik-local-ip-pbr.html
+++ b/mikrotik-local-ip-pbr.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset='utf-8'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MikroTik Client IP Static Routing (Policy Based Routing) - Buananetpbun.Github.io</title>
-    <meta content='MikroTik Client IP Static Routing (Policy Based Routing) Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'/>
+    <title>MikroTik Local Client IP Static Routing (Policy Based Routing) - Buananetpbun.Github.io</title>
+    <meta content='MikroTik Local Client IP Static Routing (Policy Based Routing) Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'/>
     <meta content='hotspot, block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'/>
     <meta content='index, follow, noodp' name='robots'/>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="MikroTik Client IP Static Routing (Policy Based Routing) By Buananetpbun.Github.io">
-    <meta property="og:description" content="MikroTik Client IP Static Routing (Policy Based Routing) By Buananetpbun.Github.io">
+    <meta property="og:title" content="MikroTik Local Client IP Static Routing (Policy Based Routing) By Buananetpbun.Github.io">
+    <meta property="og:description" content="MikroTik Local Client IP Static Routing (Policy Based Routing) By Buananetpbun.Github.io">
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/209160189-94a14e2d-f47f-49b8-aecd-c8a47f7d7ac9.png">
-    <meta property="og:image:alt" content="MikroTik Client IP Static Routing (Policy Based Routing) By Buananetpbun.Github.io">
+    <meta property="og:image:alt" content="MikroTik Local Client IP Static Routing (Policy Based Routing) By Buananetpbun.Github.io">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/mikrotik-local-ip-pbr.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
@@ -20,7 +20,7 @@
     <style>
       /* ------------------------------------------------------------------
       #####################################################################
-      # MikroTik Client IP Static Routing (Policy Based Routing)
+      # MikroTik Local Client IP Static Routing (Policy Based Routing)
       # Designer  : Agus Ramadhani / BuanaNET.Pbun
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
@@ -34,7 +34,7 @@
       *{box-sizing:border-box}
       .logo{margin-top:10px;margin-bottom:5px;color:#fff;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#fff!important;text-decoration:none!important}
-      #wrap{max-width:750px;margin:0 auto;padding:0 5px}
+      #wrap{max-width:770px;margin:0 auto;padding:0 5px}
       .header{height:auto;width:100%;margin-top:0;margin-bottom:0px;border-top:0px solid #555}
       .main-wrap{background-color:#f60}
       .content{float:left;width:100%;height:auto;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd}
@@ -147,7 +147,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>MIKROTIK <span style="color:#ff6600 !important">CLIENT IP STATIC ROUTING</span> (POLICY BASED ROUTING)</h1>
+        <h1>MIKROTIK <span style="color:#ff6600 !important">LOCAL CLIENT IP STATIC ROUTING</span> (POLICY BASED ROUTING)</h1>
       </div>
       <div class="sidebar">
         <div style="clear:both"></div>
@@ -197,7 +197,7 @@
         <div class='list-output-content' id="list-output-content" style="font-size:13px;">
           <span style="color:#ff6600;">
           ###############################################<br>
-          # MikroTik Client IP Static Routing (Policy Based Routing)<br>
+          # MikroTik Local Client IP Static Routing (Policy Based Routing)<br>
           # Date/Time: <span id="tanggalwaktu"></span><br>
           # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
           ###############################################<br>
