--- a/mikrotik-local-ip-pbr.html
+++ b/mikrotik-local-ip-pbr.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset='utf-8'/>
+    <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik Local Client IP Static Routing (Policy Based Routing) - Buananetpbun.Github.io</title>
-    <meta content='MikroTik Local Client IP Static Routing (Policy Based Routing) Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'/>
-    <meta content='hotspot, block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'/>
-    <meta content='index, follow, noodp' name='robots'/>
+    <meta content='MikroTik Local Client IP Static Routing (Policy Based Routing) Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'>
+    <meta content='hotspot, block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="MikroTik Local Client IP Static Routing (Policy Based Routing) By Buananetpbun.Github.io">
     <meta property="og:description" content="MikroTik Local Client IP Static Routing (Policy Based Routing) By Buananetpbun.Github.io">
