--- a/mikrotik-local-ip-pbr.html
+++ b/mikrotik-local-ip-pbr.html
@@ -183,7 +183,7 @@
           </div>
           <div style="float:left; width:100%;margin-right:10px">
             <label><b>Target Client IP</b></label><br>
-            <input onkeypress="return event.charCode != 32" type="text" id="ip-option" value="0.0.0.0/0" placeholder="ex: 10.5.50.0/24">
+            <input type="text" id="ip-option" value="0.0.0.0/0" placeholder="ex: 10.5.50.0/24">
           </div>
           <div style="float:left; width:100%;">	
             <label><b>Routing Mark</b></label><br>
