--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -39,6 +39,7 @@
       .main-wrap{background-color:#f60}
       .content{float:left;width:100%;height:auto;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd}
       .sidebar{float:left;width:100%;height:auto;padding:15px;background-color:#ddd;border:2px solid #ddd;border-radius:5px}
+	  .sidebar img{max-width:100%; height:auto;display:block;margin-left:auto;margin-right:auto; border-radius:5px}	
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:left;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#fff;font-size:22px;margin-bottom:5px;margin-top:10px}
