--- a/mikrotik-local-ip-pbr.html
+++ b/mikrotik-local-ip-pbr.html
@@ -157,7 +157,7 @@
             <label><b>Routing Options</b></label><br>
             <select id="routing-list" onchange="myFunctionRoutingList();myFunction()">
               <option value="R1">Route Mangle</option>
-              <option value="R2">Route Routes</option>
+              <option style="display:none" value="R2">Route Routes</option>
               <option value="R3">Route Rules</option>
             </select>
           </div>
