--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://buananetpbun.github.io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://buananetpbun.github.io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://buananetpbun.github.io/favicon-16x16.png">
-    <link rel="manifest" href="https://buananetpbun.github.io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://buananetpbun.github.io/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://buananetpbun.github.io/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://buananetpbun.github.io/img/favicon-16x16.png">
+    <link rel="manifest" href="https://buananetpbun.github.io/img/site.webmanifest">
     <meta name="google-site-verification" content="VjnLBZ-ypbNyJxYE9KWmaIHeQ3K-4GO4h8Ddb1zMD28" >
     <meta property="og:title" content="Free MikroTik RouterOS Online Tools Generator - BuanaNETPBun.Github.io">
     <meta property="og:description" content="Free MikroTik RouterOS Online Tools Generator, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts from BuanaNETPBun.Github.io">
