--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Open Remote Access ISP "Public IP Static" for MikroTik - BuanaNETPBun.Github.io</title>
-    <meta content='Open Remote Access ISP "Public IP Static" for MikroTik - BuanaNETPBun.Github.io' name='description'>
+    <title>Open Remote Access ISP (Public IP Static) for MikroTik - BuanaNETPBun.Github.io</title>
+    <meta content='Open Remote Access ISP (Public IP Static) for MikroTik - BuanaNETPBun.Github.io' name='description'>
     <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Open Remote Access ISP "Public IP Static" for MikroTik By BuanaNET-Pbun">
-    <meta property="og:description" content="Open Remote Access ISP "Public IP Static" for MikroTik By BuanaNET-Pbun">
+    <meta property="og:title" content="Open Remote Access ISP Public IP Static for MikroTik By BuanaNET-Pbun">
+    <meta property="og:description" content="Open Remote Access ISP Public IP Static for MikroTik By BuanaNET-Pbun">
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/157745809-05d1cc03-84df-4bdd-9fb8-54f99bba0b3b.png">
-    <meta property="og:image:alt" content="Open Remote Access ISP "Public IP Static" for MikroTik By BuanaNET-Pbun">
+    <meta property="og:image:alt" content="Open Remote Access ISP Public IP Static for MikroTik By BuanaNET-Pbun">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/remote-ip-public-static.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
